app/assets/stylesheets/application.scss
/*
 * Overwritten by RailsBricks
 *
 *= require_self
 *= require owl.carousel
 */
@import "owl.theme.default";
@import "railsbricks_custom";

/* Custom CSS */

.slider-count {
  width: 100%;
  margin-left: 0%;
  margin-right: 0%;
}

span.bi-link {
  font-size: 1.2em;
}

.required:after {
  content: " *";
  color: red;
}

.background_image  {
  background-image: image-url('home_background.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  border: 1px;
}

.scrollbox {
  height: 200px;
  overflow-x: scroll;
  border: 1px;
}

.relevance {
  span {
    font-weight: bold;
    font-size: 36px;

    span {
      font-weight: normal;
      font-size: 14px;
      font-style: italic;
      vertical-align: top;
    }
  }

  blockquote strong {
    background-color: #ffee99;
    font-weight: bold;
  }
}

.search {
  h5 {
    -moz-padding-start: 1em;
    -webkit-padding-start: 1em;
  }

  ul {
    font-weight: bold;
    -moz-padding-start: 1em;
    -webkit-padding-start: 1em;

    &.scrollable {
      overflow: scroll;
      height: 120px
    }

    li {
      white-space: nowrap;
      list-style-type: none;
    }
  }

  label {
    font-weight: normal;
  }

  .right { text-align: right; }

  .dual-range-input {
    width: 100%;

    &::-webkit-slider-thumb {
      background: rgb(124, 181, 236);
    }

    &::-moz-range-thumb {
      background: rgb(124, 181, 236);
    }

    &::-webkit-slider-track {
      background: rgb(149, 206, 255);
    }

    &::-moz-range-track {
      background: rgb(149, 206, 255);
    }
  }

  .dual-range-wrapper {
    width: 100%;
    display: flex;
    align-items: center; // Center labels with track
    gap: 12px;
    padding-top: 15px; // Minimal space for tag above track

    .range-label-min,
    .range-label-max {
      font-size: 1.2rem;
      color: #000000;
      font-weight: bold;
      flex-shrink: 0;
    }
  }

  .dual-range-container {
    position: relative;
    width: 100%;
    height: 50px; // Back to original height
    display: flex;
    align-items: center;

    .slider-track {
      position: absolute;
      top: 50%;
      left: 0;
      right: 0;
      height: 8px;
      background-color: #dee2e6;
      border-radius: 4px;
      transform: translateY(-50%);
    }

    .slider-range {
      position: absolute;
      top: 50%;
      height: 8px;
      background-color: #8bb7e9;
      border-radius: 4px;
      transform: translateY(-50%);
    }

    .dual-range-input {
      position: absolute;
      top: 0;
      width: 100%;
      height: 100%;
      -webkit-appearance: none;
      appearance: none;
      background: transparent;
      outline: none;
      cursor: pointer;
      pointer-events: none; // Disable pointer events on track

      &::-webkit-slider-track {
        -webkit-appearance: none;
        background: transparent;
        height: 8px;
        margin-top: calc(50% - 4px); // Center the 8px track vertically
      }

      &::-webkit-slider-thumb {
        -webkit-appearance: none;
        height: 16px;
        width: 16px;
        background: #0d6efd;
        border-radius: 50%;
        cursor: pointer;
        border: 0;
        box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
        transition: all 0.15s ease-in-out;
        pointer-events: auto; // Enable pointer events on thumb

        &:hover {
          background-color: #0b5ed7;
          transform: scale(1.1);
        }

        &:active {
          background-color: #0a58ca;
          transform: scale(1.2);
        }
      }

      &::-moz-range-track {
        background: transparent;
        height: 8px;
        border: 0;
      }

      &::-moz-range-thumb {
        height: 16px;
        width: 16px;
        background: #0d6efd;
        border-radius: 50%;
        cursor: pointer;
        border: 0;
        box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
        transition: all 0.15s ease-in-out;
        pointer-events: auto; // Enable pointer events on thumb
        -moz-appearance: none;

        &:hover {
          background-color: #0b5ed7;
          transform: scale(1.1);
        }

        &:active {
          background-color: #0a58ca;
          transform: scale(1.2);
        }
      }

      &.dual-range-min {
        z-index: 1;
      }

      &.dual-range-max {
        z-index: 2;
      }
    }

    .range-tag {
      position: absolute;
      background: #212529;
      color: white;
      padding: 6px 10px;
      border-radius: 4px;
      font-size: 1.2rem;
      font-weight: normal;
      white-space: nowrap;
      pointer-events: none;
      z-index: 10;
      top: 50%;
      transform: translate(-50%, -140%); // Position above the center of the highlighted range
      border: 1px solid #dee2e6;

      // Arrow pointing down
      &::after {
        content: '';
        position: absolute;
        top: 100%;
        left: 50%;
        transform: translateX(-50%);
        border: 4px solid transparent;
        border-top-color: #212529;
      }
    }
  }
}

.search.horizontal {
  h5 {
    display: inline-block;
  }

  ul {
    display: inline-block;

    li {
      display: inline-block;
      margin-right: 1em;
    }
  }
}

/* Ensure spacing under navbar */
header { margin-bottom: 90px; }

/* World cloud */
.word-cloud {
  width: 100%;
  height: 200px;

  span {
    color: #000 !important;
  }

  span.associated {
    color: #428bca !important;
  }

  span:hover {
    color: #23527c !important;
  }
}

.robot {
  background-color: #eeffff;
  border-color: #ddeeee;
  border-radius: 0.5em;
  border-width: 1px;
  border-style: solid;
  margin: 2em 0;
  padding: 1em 2em;
}

.status:last-child > div:last-child {
  display: none;
}

.status > div > p:last-child {
  margin: 0;
}

.status .invisible {
  visibility: inherit;
}

ul.bi {
  list-style-type: none;

  li:before {
    content: "\F134";
    font-family: bootstrap-icons !important;
    font-weight: normal !important;
    vertical-align: -0.15em;
    margin-right: 0.25em;
  }

  li {
    line-height: 1.3;
    margin-bottom: 1em;
  }

  li small {
    margin-left: 1.75em;
  }
}

